[[bin]]
name = "seeding"

[dependencies.seed_app]
path = "internals/seed_app"

[dependencies.seed_asset]
path = "internals/seed_asset"

[dependencies.seed_ecs]
path = "internals/seed_ecs"

[dependencies.seed_input]
path = "internals/seed_input"

[dependencies.seed_math]
path = "internals/seed_math"

[dependencies.seed_node]
path = "internals/seed_node"

[dependencies.seed_render]
path = "internals/seed_render"

[dependencies.seed_window]
path = "internals/seed_window"

[package]
authors = ["AdrienDML"]
edition = "2021"
license = "mit"
name = "seed_rs"
version = "0.1.0"

[package.metadata.nix]
app = true
build = true

[workspace]
exclude = []
members = ["internals/*"]
